[project]
name = "skDER"
authors = [{name="Rauf Salamzade", email="salamzader@gmail.com"}]
version = "1.1.1"
description = "Program to select distinct representatives from an input set of microbial genomes."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files=["bin/skder"]

[tool.setuptools.packages.find]
where = ["src"]
